Refactor sign-in page styles and update footer structure

--- a/sign_in.html
+++ b/sign_in.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/sign_in.css">
+  <link rel="stylesheet" href="css/styles.css">
   <script src="js/script.js" async></script>
 </head>
 
@@ -61,13 +61,10 @@
     There are currently <strong>101,730</strong> people playing!
   </div>
 
-  <section class="intro-section">
-    <h1 class="intro-title">.</h1>
-  </section>
 
   <!--policy part-->
-  <footer class="site-footer">
-    <div class="footer-content">
+  <footer class="policy-footer">
+    <div class="policy-content">
       <p>
         This website and its contents are copyright © 1999 - 2025 Jagex Games Ltd, 220 Science Park, Cambridge, CB4 0WA,
         United Kingdom.
@@ -83,7 +80,7 @@
         <a href="#">Do Not Sell Or Share My Personal Information</a>
       </p>
       <p><a href="#">RSS Feed</a></p>
-      <p class="footer-note">
+      <p class="policy-note">
         * The external links provided in this section are collected to give you an easy way of engaging with some of the
         most popular outposts of the OSRS community. Jagex is not responsible for the maintenance and safety of content
         produced and hosted by third parties and any use of third-party sites is at your own risk.
