took off the css attribute on html

--- a/road_map.html
+++ b/road_map.html
@@ -50,7 +50,7 @@
 
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <div class="roadmap-wrapper">
-          <table border="1">
+          <table>
             <thead>
               <tr>
                 <th>Update Info</th>
