modified roadmap page along with css (removing some layout, like tr tags)

--- a/road_map.html
+++ b/road_map.html
@@ -3,183 +3,166 @@
   <head>
     <meta charset="utf-8">
     <title>Road Map</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="road_map">
     <main>
       <header>
         <div class="logo-container">
-            <img src="images/oldschool.png" alt="Site Logo" class="logo">
-          </div>          
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="game.html">Game</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="close.html">Download Old School (Close)</a></li>
-                        <li><a href="close.html">World Select (Close)</a></li>
-                        <li><a href="close.html">World Map (Close)</a></li>
-                        <li><a href="close.html">Redeem Code (Close)</a></li>
-                        <li><a href="close.html">News (Close)</a></li>
-                        <li><a href="close.html">Status (Close)</a></li>
-                        <li><a href="close.html">Jagex Launcher (Close)</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="community.html">Community</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="close.html">Polls (Close)</a></li>
-                        <li><a href="close.html">Polling Charter (Close)</a></li>
-                        <li><a href="close.html">HiScores (Close)</a></li>
-                        <li><a href="road_map.html">RoadMap</a></li>
-                        <li><a href="close.html">Grand Exchange (Close)</a></li>
-                        <li><a href="close.html">Discord (Close)</a></li>
-                        <li><a href="close.html">Merchandise (Close)</a></li>
-                        <li><a href="close.html">Wiki (Close)</a></li>
-                        <li><a href="close.html">RuneLite (Close)</a></li>
-                    </ul>
-                </li>
-                <li><a href="sign_in.html">Sign In</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div>
-      <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
-    </div>
-
-        <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
-        <div class="roadmap-wrapper">
-          <table>
-            <thead>
-              <tr>
-                <th>Update Info</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="update-row row-sailing">
-                <td>
-                  <span class="show-default">Sailing Public Alpha</span>
-                  <div class="show-on-hover">
-                    <span>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
-                    <span class="release-date">Release Date: March 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-yama">
-                <td>
-                  <span class="show-default">Yama Master of Pacts</span>
-                  <div class="show-on-hover">
-                    <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
-                    <span class="release-date">Release Date: Spring 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-varlamore">
-                <td>
-                  <span class="show-default">Varlamore: The Final Dawn</span>
-                  <div class="show-on-hover">
-                    <span>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.</span>
-                    <span class="release-date">Release Date: Summer 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-basic">
-                <td>
-                  <span class="show-default">Summer Sweep Up</span>
-                  <div class="show-on-hover">
-                    <span>Akin to Project Rebalance, we're back with another round of tweaks to preserve the long-term health of the game. Including, Loot Table changes, Slayer improvements and more!</span>
-                    <span class="release-date">Release Date: Summer 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-sailing-two">
-                <td>
-                  <span class="show-default">Sailing</span>
-                  <div class="show-on-hover">
-                    <span>Old School's first new skill will be arriving this year, with plenty of new content, training methods and areas for you to explore out on the open seas of Gielinor!</span>
-                    <span class="release-date">Release Date: Autumn 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-deadman">
-                <td>
-                  <span class="show-default">Deadman 2025</span>
-                  <div class="show-on-hover">
-                    <span>Taking the learnings from the previous Deadman, we're bring DMM back this year with a new finale, new breach monsters and brand new sigils! Be prepared...</span>
-                    <span class="release-date">Release Date: Winter 2025</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-blood-moon">
-                <td>
-                  <span class="show-default">The Blood Moon Rises</span>
-                  <div class="show-on-hover">
-                    <span>Are you ready to save the citizens of Morytanis in the grand finale to the Vampyre storyline. Expect high-stakes storytelling, complex puzzles, and some of the most challenging combat encounters yet seen in a quest.</span>
-                    <span class="release-date">Release Date: Early 2026</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-basic">
-                <td>
-                  <span class="show-default">HD and API Update</span>
-                  <div class="show-on-hover">
-                    <span>Enhancing the core Old School experience even further with HD Mode, improved performance on SD Mode and creating an Official Plugin echosystem for both Desktop and Mobile!</span>
-                    <span class="release-date">Release Date: Expect More Soon!</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-zanaris">
-                <td>
-                  <span class="show-default">Project Zanaris</span>
-                  <div class="show-on-hover">
-                    <span>Community Servers will take the Old School RuneScape you know and love and let you tweak different elements to create a brand-new gameplay experience and more.</span>
-                    <span class="release-date">Release Date: Playtests Coming Soon!</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-basic">
-                <td>
-                  <span class="show-default">Seasonal Events</span>
-                  <div class="show-on-hover">
-                    <span>You can expect the same wonderful events to return throughout the year, including Pride, Halloween and Christmas with wacky new adventures and rewards!</span>
-                    <span class="release-date">Release Date: Various Releases</span>
-                  </div>
-                </td>
-              </tr>
-              <tr class="update-row row-basic">
-                <td>
-                  <span class="show-default">Quality of Life Polls</span>
-                  <div class="show-on-hover">
-                    <span>QoL Polls will be continuing throughout the year in order to continue updating smaller areas of the game, with some much needed TLC!	</span>
-                    <span class="release-date">Release date: Various Releases</span>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <img src="images/oldschool.png" alt="Site Logo" class="logo">
         </div>
-        <footer class="site-footer">
-          <div class="footer-content">
-            <p>
-              This website and its contents are copyright © 1999 - 2025 Jagex Games Ltd, 220 Science Park, Cambridge, CB4 0WA, United Kingdom.
-            </p>
-            <p>
-              Use of this website is subject to our 
-              <a href="#">Terms & Conditions</a> and 
-              <a href="#">Privacy Policy</a>
-            </p>
-            <p>
-              <a href="#">Rules of Old School RuneScape</a> |
-              <a href="#">Change Cookie Settings</a> |
-              <a href="#">Do Not Sell Or Share My Personal Information</a>
-            </p>
-            <p><a href="#">RSS Feed</a></p>
-            <p class="footer-note">
-              * The external links provided in this section are collected to give you an easy way of engaging with some of the most popular outposts of the OSRS community. Jagex is not responsible for the maintenance and safety of content produced and hosted by third parties and any use of third-party sites is at your own risk.
-            </p>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
+              <a href="game.html">Game</a>
+              <ul class="dropdown-menu">
+                <li><a href="close.html">Download Old School (Close)</a></li>
+                <li><a href="close.html">World Select (Close)</a></li>
+                <li><a href="close.html">World Map (Close)</a></li>
+                <li><a href="close.html">Redeem Code (Close)</a></li>
+                <li><a href="close.html">News (Close)</a></li>
+                <li><a href="close.html">Status (Close)</a></li>
+                <li><a href="close.html">Jagex Launcher (Close)</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="community.html">Community</a>
+              <ul class="dropdown-menu">
+                <li><a href="close.html">Polls (Close)</a></li>
+                <li><a href="close.html">Polling Charter (Close)</a></li>
+                <li><a href="close.html">HiScores (Close)</a></li>
+                <li><a href="road_map.html">RoadMap</a></li>
+                <li><a href="close.html">Grand Exchange (Close)</a></li>
+                <li><a href="close.html">Discord (Close)</a></li>
+                <li><a href="close.html">Merchandise (Close)</a></li>
+                <li><a href="close.html">Wiki (Close)</a></li>
+                <li><a href="close.html">RuneLite (Close)</a></li>
+              </ul>
+            </li>
+            <li><a href="sign_in.html">Sign In</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <div>
+        <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
+      </div>
+
+      <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
+      <div class="roadmap">
+
+        <div class="update-row row-sailing">
+          <span class="show-default">Sailing Public Alpha</span>
+          <div class="show-on-hover">
+            <span>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
+            <span class="release-date">Release Date: March 2025</span>
           </div>
-        </footer> 
+        </div>
+
+        <div class="update-row row-yama">
+          <span class="show-default">Yama Master of Pacts</span>
+          <div class="show-on-hover">
+            <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
+            <span class="release-date">Release Date: Spring 2025</span>
+          </div>
+        </div>
+
+        <div class="update-row row-varlamore">
+          <span class="show-default">Varlamore: The Final Dawn</span>
+          <div class="show-on-hover">
+            <span>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.</span>
+            <span class="release-date">Release Date: Summer 2025</span>
+          </div>
+        </div>
+
+        <div class="update-row row-basic">
+          <span class="show-default">Summer Sweep Up</span>
+          <div class="show-on-hover">
+            <span>Akin to Project Rebalance, we're back with another round of tweaks to preserve the long-term health of the game. Including, Loot Table changes, Slayer improvements and more!</span>
+            <span class="release-date">Release Date: Summer 2025</span>
+          </div>
+        </div>
+
+        <div class="update-row row-sailing-two">
+          <span class="show-default">Sailing</span>
+          <div class="show-on-hover">
+            <span>Old School's first new skill will be arriving this year, with plenty of new content, training methods and areas for you to explore out on the open seas of Gielinor!</span>
+            <span class="release-date">Release Date: Autumn 2025</span>
+          </div>
+        </div>
+
+        <div class="update-row row-deadman">
+          <span class="show-default">Deadman 2025</span>
+          <div class="show-on-hover">
+            <span>Taking the learnings from the previous Deadman, we're bringing DMM back this year with a new finale, new breach monsters and brand new sigils! Be prepared...</span>
+            <span class="release-date">Release Date: Winter 2025</span>
+          </div>
+        </div>
+
+        <div class="update-row row-blood-moon">
+          <span class="show-default">The Blood Moon Rises</span>
+          <div class="show-on-hover">
+            <span>Are you ready to save the citizens of Morytania in the grand finale to the Vampyre storyline? Expect high-stakes storytelling, complex puzzles, and some of the most challenging combat encounters yet seen in a quest.</span>
+            <span class="release-date">Release Date: Early 2026</span>
+          </div>
+        </div>
+
+        <div class="update-row row-basic">
+          <span class="show-default">HD and API Update</span>
+          <div class="show-on-hover">
+            <span>Enhancing the core Old School experience even further with HD Mode, improved performance on SD Mode and creating an Official Plugin ecosystem for both Desktop and Mobile!</span>
+            <span class="release-date">Release Date: Expect More Soon!</span>
+          </div>
+        </div>
+
+        <div class="update-row row-zanaris">
+          <span class="show-default">Project Zanaris</span>
+          <div class="show-on-hover">
+            <span>Community Servers will take the Old School RuneScape you know and love and let you tweak different elements to create a brand-new gameplay experience and more.</span>
+            <span class="release-date">Release Date: Playtests Coming Soon!</span>
+          </div>
+        </div>
+
+        <div class="update-row row-basic">
+          <span class="show-default">Seasonal Events</span>
+          <div class="show-on-hover">
+            <span>You can expect the same wonderful events to return throughout the year, including Pride, Halloween and Christmas with wacky new adventures and rewards!</span>
+            <span class="release-date">Release Date: Various Releases</span>
+          </div>
+        </div>
+
+        <div class="update-row row-basic">
+          <span class="show-default">Quality of Life Polls</span>
+          <div class="show-on-hover">
+            <span>QoL Polls will be continuing throughout the year in order to continue updating smaller areas of the game, with some much needed TLC!</span>
+            <span class="release-date">Release Date: Various Releases</span>
+          </div>
+        </div>
+      </div>
+
+      <footer class="site-footer">
+        <div class="footer-content">
+          <p>
+            This website and its contents are copyright © 1999 - 2025 Jagex Games Ltd, 220 Science Park, Cambridge, CB4 0WA, United Kingdom.
+          </p>
+          <p>
+            Use of this website is subject to our 
+            <a href="#">Terms & Conditions</a> and 
+            <a href="#">Privacy Policy</a>
+          </p>
+          <p>
+            <a href="#">Rules of Old School RuneScape</a> |
+            <a href="#">Change Cookie Settings</a> |
+            <a href="#">Do Not Sell Or Share My Personal Information</a>
+          </p>
+          <p><a href="#">RSS Feed</a></p>
+          <p class="footer-note">
+            * The external links provided in this section are collected to give you an easy way of engaging with some of the most popular outposts of the OSRS community. Jagex is not responsible for the maintenance and safety of content produced and hosted by third parties and any use of third-party sites is at your own risk.
+          </p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
