--- a/sign_in.html
+++ b/sign_in.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel="stylesheet" href="css/reset.css">
@@ -10,7 +10,7 @@
   <script src="js/script.js" async></script>
 </head>
 
-<body>
+<body class="sign-in-page">
 
   <!--home page nav-->
   <header>
@@ -62,32 +62,6 @@
   </div>
 
 
-  <!--policy part-->
-  <footer class="policy-footer">
-    <div class="policy-content">
-      <p>
-        This website and its contents are copyright © 1999 - 2025 Jagex Games Ltd, 220 Science Park, Cambridge, CB4 0WA,
-        United Kingdom.
-      </p>
-      <p>
-        Use of this website is subject to our
-        <a href="#">Terms & Conditions</a> and
-        <a href="#">Privacy Policy</a>
-      </p>
-      <p>
-        <a href="#">Rules of Old School RuneScape</a> |
-        <a href="#">Change Cookie Settings</a> |
-        <a href="#">Do Not Sell Or Share My Personal Information</a>
-      </p>
-      <p><a href="#">RSS Feed</a></p>
-      <p class="policy-note">
-        * The external links provided in this section are collected to give you an easy way of engaging with some of the
-        most popular outposts of the OSRS community. Jagex is not responsible for the maintenance and safety of content
-        produced and hosted by third parties and any use of third-party sites is at your own risk.
-      </p>
-    </div>
-  </footer>
-
   <!--home page nav end-->
 
   <!--sign in page images-->
@@ -130,6 +104,8 @@
     </form>
   </div>
 
+
+    
 </body>
 
 </html>
