Fix image alt attributes for better accessibility and clarity

--- a/sign_in.html
+++ b/sign_in.html
@@ -65,8 +65,8 @@
   <!--home page nav end-->
 
   <!--sign in page images-->
-  <img id="img1" src="images/dragonfight.jpg" alt="rusty scroll">
-  <img id="img2" src="images/Dungeon.jpg" alt="rusty scroll">
+  <img id="img1" src="images/dragonfight.jpg" alt="dragon fighing players">
+  <img id="img2" src="images/Dungeon.jpg" alt="dungeon hallway">
 
 
   <!-- sign in form-->
