--- a/sign_in.html
+++ b/sign_in.html
@@ -79,7 +79,7 @@
       </div>
       <div class="rowcolumns">
         <label>Email*
-          <input type="text" name="email" placeholder="EMAIL" required autocomplete="email">
+          <input type="email" name="email" placeholder="EMAIL" required autocomplete="email">
         </label>
       </div>
       <div class="rowcolumns">
