--- a/sign_in.html
+++ b/sign_in.html
@@ -127,7 +127,7 @@
         </label>
       </div>
       <div class="submit-button">
-        <button type="submit">Confirm Registration
+        <button type="submit">Escaliber
         </button>
       </div>
     </form>
