--- a/sign_in.html
+++ b/sign_in.html
@@ -73,8 +73,8 @@
   <div class="translucent-form-overlay">
     <form class="translucent-form" action="index.html" method="post" spellcheck="true" autocomplete="on">
       <div class="rowcolumns">
-        <label>Username*
-          <input type="text" name="username" placeholder="USERNAME" required autocomplete="username">
+        <label for="username">Username*
+          <input type="text" name="username" id="username" placeholder="USERNAME" required autocomplete="username">
         </label>
       </div>
       <div class="rowcolumns">
@@ -84,7 +84,7 @@
       </div>
       <div class="rowcolumns">
         <label>Password*
-          <input type="text" name="password" placeholder="PASSWORD" required autocomplete="new-password">
+          <input type="password" name="password" placeholder="PASSWORD" required autocomplete="new-password">
           <span class="password-requirements">Password must be at least 8 characters long, contain at least one number,
             one uppercase letter, and one lowercase letter.</span>
         </label>
