added media querie for mobile devices

--- a/index.html
+++ b/index.html
@@ -8,43 +8,44 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="images/oldschool.png" alt="Site Logo" class="logo">
-          </div>          
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="game.html">Game</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="close.html">Download Old School (Close)</a></li>
-                        <li><a href="close.html">World Select (Close)</a></li>
-                        <li><a href="close.html">World Map (Close)</a></li>
-                        <li><a href="close.html">Redeem Code (Close)</a></li>
-                        <li><a href="close.html">News (Close)</a></li>
-                        <li><a href="close.html">Status (Close)</a></li>
-                        <li><a href="close.html">Jagex Launcher (Close)</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="community.html">Community</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="close.html">Polls (Close)</a></li>
-                        <li><a href="close.html">Polling Charter (Close)</a></li>
-                        <li><a href="close.html">HiScores (Close)</a></li>
-                        <li><a href="road_map.html">RoadMap</a></li>
-                        <li><a href="close.html">Grand Exchange (Close)</a></li>
-                        <li><a href="close.html">Discord (Close)</a></li>
-                        <li><a href="close.html">Merchandise (Close)</a></li>
-                        <li><a href="close.html">Wiki (Close)</a></li>
-                        <li><a href="close.html">RuneLite (Close)</a></li>
-                    </ul>
-                </li>
-                <li><a href="sign_in.html">Sign In</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header class="header-container">
+    <div class="logo-container">
+      <img src="images/oldschool.png" alt="Site Logo" class="logo">
+    </div>          
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="game.html">Game</a>
+          <ul class="dropdown-menu">
+            <li><a href="close.html">Download Old School (Close)</a></li>
+            <li><a href="close.html">World Select (Close)</a></li>
+            <li><a href="close.html">World Map (Close)</a></li>
+            <li><a href="close.html">Redeem Code (Close)</a></li>
+            <li><a href="close.html">News (Close)</a></li>
+            <li><a href="close.html">Status (Close)</a></li>
+            <li><a href="close.html">Jagex Launcher (Close)</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="community.html">Community</a>
+          <ul class="dropdown-menu">
+            <li><a href="close.html">Polls (Close)</a></li>
+            <li><a href="close.html">Polling Charter (Close)</a></li>
+            <li><a href="close.html">HiScores (Close)</a></li>
+            <li><a href="road_map.html">RoadMap</a></li>
+            <li><a href="close.html">Grand Exchange (Close)</a></li>
+            <li><a href="close.html">Discord (Close)</a></li>
+            <li><a href="close.html">Merchandise (Close)</a></li>
+            <li><a href="close.html">Wiki (Close)</a></li>
+            <li><a href="close.html">RuneLite (Close)</a></li>
+          </ul>
+        </li>
+        <li><a href="sign_in.html">Sign In</a></li>
+      </ul>
+    </nav>
+  </header>
+  
     <div class="banner">
         <img src="images/background.jpeg" alt="Banner Image" class="banner-image">
         <div class="banner-options">
