added hamburguer menu functionality for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Old School RuneScape</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
   <header class="header-container">
@@ -13,6 +14,7 @@
       <img src="images/oldschool.png" alt="Site Logo" class="logo">
     </div>          
     <nav>
+      <button class="hamburger" id="hamburger">&#9776;</button>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
