--- a/road_map.html
+++ b/road_map.html
@@ -5,6 +5,7 @@
     <title>Road Map</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
   </head>
   <body class="road_map">
     <main>
@@ -13,6 +14,7 @@
           <img src="images/oldschool.png" alt="Site Logo" class="logo">
         </div>
         <nav>
+          <button class="hamburger" id="hamburger">&#9776;</button>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="dropdown">
