--- a/sign_in.html
+++ b/sign_in.html
@@ -97,7 +97,7 @@
         </label>
       </div>
       <div class="submit-button">
-        <button type="submit">Confirm Registration
+        <button type="submit">Scalibur
         </button>
       </div>
     </form>
