--- a/sign_in.html
+++ b/sign_in.html
@@ -6,6 +6,7 @@
   <title>Sign In</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/script.js" async></script>
 </head>
 <body class="sign-in-page">
