Update sign-in page image and adjust CSS media queries for better responsiveness

--- a/sign_in.html
+++ b/sign_in.html
@@ -51,7 +51,7 @@
     There are currently <strong>101,730</strong> people playing!
   </div>
   <img id="img1" src="images/dragonfight.jpg" alt="dragon fighing players">
-  <img id="img2" src="images/Dungeon.jpg" alt="dungeon hallway">
+  <img id="img2" src="images/village.jpg" alt="dai runescape village">
   <div class="translucent-form-overlay">
     <form class="translucent-form" action="index.html" method="post" spellcheck="true" autocomplete="on">
       <div class="rowcolumns">
