--- a/sign_in.html
+++ b/sign_in.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/script.js" async></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer ></script>
+  <script src="js/script.js" defer ></script>
 </head>
+
 <body class="sign-in-page">
   <header>
     <div class="logo-container">
@@ -51,7 +53,10 @@
     There are currently <strong>101,730</strong> people playing!
   </div>
   <img id="img1" src="images/dragonfight.jpg" alt="dragon fighing players">
-  <img id="img2" src="images/village.jpg" alt="dai runescape village">
+  <img id="img2" src="images/village.jpg" alt="ai runescape village">
+  <div class="scroll-container">
+    <img id="img3" src="images/scroll.jpg" alt="ai scroll for mobile design">
+  </div>
   <div class="translucent-form-overlay">
     <form class="translucent-form" action="index.html" method="post" spellcheck="true" autocomplete="on">
       <div class="rowcolumns">
@@ -86,4 +91,5 @@
     </form>
   </div>
 </body>
+
 </html>
