--- a/sign_in.html
+++ b/sign_in.html
@@ -7,8 +7,8 @@
   <title>Sign In</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer ></script>
-  <script src="js/script.js" defer ></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" async  ></script>
+  <script src="js/script.js" async  ></script>
 </head>
 
 <body class="sign-in-page">
