--- a/sign_in.html
+++ b/sign_in.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/script.js" async></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body class="sign-in-page">
